adapted links + minor text update

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     in one of the boxes to the right.
   </p>
   <p>
-    Some browsers such as Chrome do not allow web pages to emit sound
+    Most browsers do not allow web pages to emit sound
     before you have interacted with the page
     (and keyboard input does not count).
     So click this button to enable audio output:
@@ -88,11 +88,11 @@
   <p>
     The purpose of this demo was to experiment with sound generation
     in an <code>AudioWorkletNode</code>.
-    (See <a href="index.js" target="_blank" rel="noopener noreferrer">here</a>
+    (See <a href="https://github.com/hcschuetz/guitar-simulation/blob/main/index.js" target="_blank" rel="noopener noreferrer">here</a>
     for the main JavaScript code and
-    <a href="StringWorklet.js" target="_blank" rel="noopener noreferrer">here</a>
+    <a href="https://github.com/hcschuetz/guitar-simulation/blob/main/StringWorklet.js" target="_blank" rel="noopener noreferrer">here</a>
     for the worklet processor code.  Furthermore
-    <a href="note-display.js" target="_blank" rel="noopener noreferrer">here</a>
+    <a href="https://github.com/hcschuetz/guitar-simulation/blob/main/note-display.js" target="_blank" rel="noopener noreferrer">here</a>
     is the code for drawing the notes.)
   </p>
   <p>
